# VrApp

./: CMakeLists.txt  README_models_and_textures.txt  THIRD_PARTY_ASSETS.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: drumset_hi_hat_top.glb  drumset_main.glb  drumstick.glb
app/src/main/assets/shaders/: DebugDrumFragment_GLES.glsl  DebugDrumVertex_GLES.glsl  DrumDebugRawFragment_GLES.glsl  DrumDebugRawVertex_GLES.glsl  MeshPixel_GLES.glsl  MeshVertex_GLES.glsl
app/src/main/cpp/: app_main.cpp  audio_engine.cpp  audio_engine.h
app/src/main/cpp/vrcore/: vr_instance.cpp  vr_instance.hpp
app/src/main/res/values/: strings.xml
cmake/: FindOpenGLES.cmake
gradle/wrapper/: gradle-wrapper.properties
